--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -54,7 +54,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bus_bookmark"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/busstop_bookmark"
         app:layout_constraintLeft_toLeftOf="parent"
