--- a/app/src/main/res/layout/recyclerview_bus_item.xml
+++ b/app/src/main/res/layout/recyclerview_bus_item.xml
@@ -16,8 +16,7 @@
         android:layout_marginLeft="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_bookmark"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
         android:id="@+id/busCongested"
@@ -26,8 +25,7 @@
         android:layout_marginLeft="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/bus_bookmark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_bus" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <ImageView
         android:id="@+id/bus_color"
@@ -36,8 +34,7 @@
         android:layout_marginLeft="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/bus_bookmark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_bus_" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bus_info"
@@ -55,7 +52,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:ems="4"
+        android:ems="5"
         android:text="버스 번호"
         android:textSize="20dp"
         android:gravity="right"/>
@@ -66,6 +63,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="@id/bus_num"
         app:layout_constraintTop_toBottomOf="@id/bus_num"
+        android:ems="8"
         android:text="~ 방면"
         android:textSize="16dp"
         android:gravity="right"/>
@@ -116,8 +114,7 @@
         android:layout_marginRight="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_alarm"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
