--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/busstop_bookmark"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:padding="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/button_round"
@@ -19,9 +19,9 @@
 
         <ImageView
             android:id="@+id/drawer_button"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginStart="15dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="버스정류장 이름"
-            android:textSize="32sp"
+            android:textSize="20sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/drawer_button"
             app:layout_constraintRight_toLeftOf="@+id/bookmark_button"
@@ -40,9 +40,9 @@
 
         <ImageView
             android:id="@+id/bookmark_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="20dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="15dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
