--- a/app/src/main/res/layout/recyclerview_bus_item.xml
+++ b/app/src/main/res/layout/recyclerview_bus_item.xml
@@ -22,7 +22,8 @@
         android:id="@+id/busCongested"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="5dp"
+        android:src="@drawable/ic_man"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/bus_bookmark"
         app:layout_constraintBottom_toBottomOf="parent" />
@@ -31,54 +32,53 @@
         android:id="@+id/bus_color"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginStart="5dp"
+        android:src="@drawable/ic_bus_"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/bus_bookmark"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bus_info"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        app:layout_constraintHorizontal_weight="49"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/busCongested"
-        app:layout_constraintRight_toLeftOf="@+id/bus_time"
-        android:layout_marginLeft="80dp">
+        app:layout_constraintRight_toLeftOf="@+id/bus_time">
 
     <TextView
         android:id="@+id/bus_num"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:ems="5"
         android:text="버스 번호"
-        android:textSize="20dp"
-        android:gravity="right"/>
+        android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/bus_destination"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="@id/bus_num"
         app:layout_constraintTop_toBottomOf="@id/bus_num"
         android:ems="8"
         android:text="~ 방면"
-        android:textSize="16dp"
-        android:gravity="right"/>
+        android:textSize="13sp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bus_time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        app:layout_constraintHorizontal_weight="51"
+        app:layout_constraintLeft_toRightOf="@+id/bus_info"
         app:layout_constraintRight_toLeftOf="@+id/bus_alarm"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -89,9 +89,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bus_second"
             android:text="도착 시간1"
-            android:textSize="12dp"
-            android:ems="14"
-            android:gravity="right"/>
+            android:textSize="11sp"
+            android:ems="14"/>
 
         <TextView
             android:id="@+id/bus_second"
@@ -100,10 +99,9 @@
             app:layout_constraintRight_toRightOf="@id/bus_first"
             app:layout_constraintTop_toBottomOf="@id/bus_first"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="12dp"
+            android:textSize="11sp"
             android:ems="14"
-            android:text="도착 시간2"
-            android:gravity="right"/>
+            android:text="도착 시간2"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
