--- a/app/src/main/res/drawable/ic_complaint.xml
+++ b/app/src/main/res/drawable/ic_complaint.xml
@@ -1,9 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="500dp"
+    android:height="500dp"
+    android:viewportWidth="500"
+    android:viewportHeight="500">
     <path
-        android:fillColor="#777777"
-        android:pathData="M20,2L4,2c-1.1,0 -1.99,0.9 -1.99,2L2,22l4,-4h14c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM9,11L7,11L7,9h2v2zM13,11h-2L11,9h2v2zM17,11h-2L15,9h2v2z"/>
+        android:fillColor="#000"
+        android:name="hand"
+        android:pathData="m277.8 80.3c-0 0 -0 0 -0 0c-2.1 0 -3.8 1.7 -3.8 3.8c0 2.1 1.7 3.8 3.8 3.8c0 0 0 -0 0 -0c2.1 -0 3.8 -1.7 3.8 -3.8c-0 -2.1 -1.7 -3.8 -3.8 -3.8zm94.5 132.4c0 0 0 0 0 0zm-170.7 9c0 0 0 0 0 0zm-13 132.7 0 0.5 -0.3 0c0.1 -0.2 0.2 -0.4 0.3 -0.5zm-0.3 0.5c0 0 0 0 0 0h-0h0zm154.4 -279.5c8.4 0 15.2 6.8 15.2 15.2l0.9 160.7c-4.8 8 -3.5 14 0.1 18.7l0.1 17.1c-6.8 5.9 -4.7 12.5 0.1 18.9l0.3 57.8c0 8.4 -6.7 15.3 -15.2 15.3l-126.6 0.7c-0 0 -0.1 0 -0.1 0c-8.4 0 -15.2 -6.8 -15.2 -15.2l-0.5 -92.3c6 -7.4 18.5 -17.6 29.2 -21.2c14.6 -4.9 41.9 -25.1 45.2 -33.2c4.7 -11.4 0.4 -18.6 -4.6 -18.6c-1.4 0 -2.8 0.5 -4.2 1.7c-9.6 8.2 -35.5 12.5 -51.8 15.2c-3.6 0.6 -8.6 2.6 -14.2 5.5l-0.7 -130.2c-0 -8.4 6.7 -15.3 15.2 -15.3l126.6 -0.7c0 -0 0.1 -0 0.1 -0zm13.8 -15.3c-0 0 -0.1 0 -0.1 0l-154.3 0.9c-8.4 0 -15.1 6.9 -15 15.3l0.9 153.4c-16.9 10.7 -34.9 24.9 -41.1 31.8c-10.2 11.4 -28.9 85 -28.9 85l-15.9 16.7l2.3 -0.1l24.8 76.1l20.8 -4.8c38.9 -3.9 131.4 -15.1 176.8 -38.3h-0l31.6 -0.2c8.4 -0 15.1 -6.9 15 -15.3l-0.1 -13.4c5.6 -1.7 13.2 -9.8 12.4 -20.8c0 0 -3.6 -19.5 -12.7 -21.3l-0 -4.8c0.1 0.1 0.2 0.2 0.4 0.3c1.4 1.4 2.7 1.9 4 1.9c7.7 0 12.8 -21 12.8 -21c0 0 -7.2 -14.5 -17.4 -17.7l-0 -2.8c0.2 0.1 0.4 0.3 0.6 0.4c1.9 1.2 3.8 1.8 5.7 1.8c7 0 13.4 -7.5 14.5 -13c1.4 -7 -6.7 -14.6 -6.7 -14.6c0 0 -7 -6.5 -14.2 -8.9l-0 -3c11.2 -3 25.8 -8.3 25.5 -15c-0.7 -14.1 -7.5 -18 -14.6 -18c-3.9 0 -7.8 1.1 -11.1 2.4l-0.8 -137.5c-0 -8.4 -6.8 -15.2 -15.1 -15.2z" />
+    <path
+        android:fillColor="#000"
+        android:name="phone"
+        android:pathData="m284.1 148v16.9h1.3v-16.9zm49.2 23.8 -11.2 12 0.9 1 11.2 -12 -0.9 -1zm-97.9 1 -0.9 1 11.2 12 0.9 -1 -11.2 -12zm47.6 5.8c-36.7 0 -47.4 29.7 -48.4 73.7h-3.1c-5.3 0 -9.5 2.1 -9.5 4.7v3.3c0 2.6 4.3 4.7 9.5 4.7h103.9c5.3 0 9.5 -2.1 9.5 -4.7v-3.3c0 -2.6 -4.3 -4.7 -9.5 -4.7h-4.1c-1.1 -43.8 -13 -73.7 -48.4 -73.7z" />
 </vector>
