--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -124,6 +124,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginLeft="40dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvPasswd"
+                android:inputType="textPassword"
                 android:maxLength="15"
                 android:ellipsize="start"
                 android:singleLine="true" />
@@ -150,6 +151,7 @@
                 android:layout_marginTop="7dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginLeft="40dp"
+                android:inputType="textPassword"
                 app:layout_constraintTop_toBottomOf="@+id/tvCheckPW"
                 android:maxLength="15"
                 android:ellipsize="start"
