--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
+        android:inputType="textPassword"
         app:layout_constraintTop_toBottomOf="@+id/editID"/>
 
     <Button
