--- a/app/src/main/res/menu/drawer_item.xml
+++ b/app/src/main/res/menu/drawer_item.xml
@@ -6,7 +6,7 @@
         android:title="@string/complaint"/>
     <item
         android:id="@+id/drawerLostList"
-        android:icon="@drawable/ic_lost_list"
+        android:icon="@drawable/ic_lostgoods"
         android:title="@string/lost_list"/>
     <item
         android:id="@+id/drawerSetLocation"
