--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -9,23 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
             android:id="@+id/searchGoBack"
             android:layout_width="25dp"
             android:layout_height="30dp"
             android:background="@drawable/ic_go_back"
-            android:backgroundTint="@color/colorAccent"/>
+            android:backgroundTint="@color/colorAccent" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="15dp"
             android:text="로그인"
-            android:textSize="18sp"
             android:textColor="#aa777777"
-            android:paddingStart="15dp">
-            <requestFocus/>
+            android:textSize="18sp">
+
+            <requestFocus />
         </TextView>
 
     </androidx.appcompat.widget.Toolbar>
