--- a/app/src/main/res/layout/activity_lost_goods_detail.xml
+++ b/app/src/main/res/layout/activity_lost_goods_detail.xml
@@ -21,6 +21,7 @@
             android:backgroundTint="@color/colorAccent"/>
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="title"
