--- a/app/src/main/res/layout/activity_lost_goodsinfo.xml
+++ b/app/src/main/res/layout/activity_lost_goodsinfo.xml
@@ -32,7 +32,7 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
+    <!--
     <Spinner
         android:id="@+id/lostGroup"
         android:layout_width="wrap_content"
@@ -40,18 +40,20 @@
         android:layout_marginLeft="20dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintLeft_toLeftOf="parent"/>
+    -->
 
     <EditText
         android:id="@+id/userLostGoods"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_round"
+        android:layout_marginStart="10dp"
         android:textSize="18sp"
         android:hint="분실물명 검색"
         android:padding="10dp"
         android:ems="8"
-        app:layout_constraintTop_toTopOf="@+id/lostGroup"
-        app:layout_constraintLeft_toRightOf="@+id/lostGroup"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/searchButton"/>
 
     <Button
@@ -60,7 +62,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@+id/userLostGoods"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="10dp"
         android:text="검색"/>
 
     <androidx.recyclerview.widget.RecyclerView
