--- a/app/src/main/res/layout/activity_lost_goods_detail.xml
+++ b/app/src/main/res/layout/activity_lost_goods_detail.xml
@@ -27,9 +27,7 @@
             android:text="title"
             android:textSize="18sp"
             android:textColor="#aa777777"
-            android:paddingStart="15dp">
-            <requestFocus/>
-        </TextView>
+            android:paddingStart="15dp" />
 
     </androidx.appcompat.widget.Toolbar>
 
