--- a/app/src/main/res/xml/setting.xml
+++ b/app/src/main/res/xml/setting.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:title="기본설정">
+    <PreferenceCategory android:title="기본설정" />
         <ListPreference
             android:key="auto_refresh"
             android:title="자동 새로고침 간격"
@@ -14,40 +14,32 @@
             android:title="알림음 설정"
             android:summary="0"
             android:defaultValue="0" />
-    </PreferenceCategory>
 
-    <PreferenceCategory android:title="개인정보">
+
+    <PreferenceCategory android:title="개인정보" />
         <Preference
             android:key="account_info"
             android:title="계정정보"
             android:summary="로그인 해주세요." />
-    </PreferenceCategory>
 
-    <PreferenceCategory android:title="약관 및 정책">
+    <PreferenceCategory android:title="약관 및 정책" />
         <Preference
-            android:key="service"
-            android:title="서비스 이용약관" />
-        <Preference
-            android:key="location"
-            android:title="위치기반서비스 이용약관" />
-        <Preference
-            android:key="user_info"
+            android:key="privacy_policy"
             android:title="개인정보 처리방침" />
         <Preference
-            android:key="information"
+            android:key="information_provider"
             android:title="정보 제공처" />
         <Preference
-            android:key="use_open_source"
-            android:title="오픈소스 정보" />
-    </PreferenceCategory>
+            android:key="open_source"
+            android:title="오픈소스" />
 
-    <PreferenceCategory android:title="고객지원">
+
+    <PreferenceCategory android:title="고객지원" />
         <Preference
             android:key="question"
             android:title="도움말" />
         <Preference
             android:key="complaint"
             android:title="문의하기" />
-    </PreferenceCategory>
 
 </PreferenceScreen>
