--- a/app/src/main/res/drawable/ic_notice.xml
+++ b/app/src/main/res/drawable/ic_notice.xml
@@ -1,9 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
+    android:width="500dp"
+    android:height="500dp"
+    android:viewportWidth="500"
+    android:viewportHeight="500">
     <path
-        android:fillColor="#aa777777"
-        android:pathData="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.89,2 2,2zM18,16v-5c0,-3.07 -1.64,-5.64 -4.5,-6.32L13.5,4c0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.5,0.67 -1.5,1.5v0.68C7.63,5.36 6,7.92 6,11v5l-2,2v1h16v-1l-2,-2z"/>
+        android:fillColor="#999"
+        android:name="타원 2"
+        android:pathData="m365.2 37.6v0h-0c0 -0 0 -0 0 -0zm11.7 17.9c32.7 0 59.1 72.4 59.1 161.7c0 89.3 -26.5 161.7 -59.1 161.7c-32.7 0 -54.3 -72.4 -54.3 -161.7c0 -89.3 21.7 -161.7 54.3 -161.7zm-11.7 -18.5c-0.1 0.2 -0.3 0.4 -0.4 0.7h-0c-11.6 2.5 -22.2 12.2 -31.2 27.2c-63.9 41.6 -192.7 87.7 -192.7 87.7c-27.9 0 -50.5 15.3 -50.5 34.1v68.3c0 18.9 22.6 34.1 50.5 34.1c0 0 114.2 33.5 184.8 78.9h-0c10.6 18.4 23.9 29.6 39.1 32c0.1 0.2 0.3 0.3 0.4 0.5v-0.4c1.9 0.3 3.7 0.4 5.7 0.4c42.6 0 77.2 -81.3 77.2 -181.7c0 -100.3 -34.5 -181.7 -77.2 -181.7c-1.9 0 -3.8 0.2 -5.7 0.6v-0.6z" />
+    <path
+        android:fillColor="#999"
+        android:name="타원 2"
+        android:pathData="m147.4 140.2c-10.8 -10.8 -72.4 18.1 -72.4 40.4v80.8c0 22.3 63.2 49.7 72.4 40.4c9.2 -9.2 10.8 -150.9 0 -161.7z" />
+    <path
+        android:fillColor="#999"
+        android:name="타원 3"
+        android:pathData="m324.7 149.4c37.5 0 67.8 30.3 67.8 67.7c0 37.4 -30.4 67.7 -67.8 67.7c-37.5 0 -67.8 -30.3 -67.8 -67.7c0 -37.4 30.4 -67.7 67.8 -67.7z" />
+    <path
+        android:fillColor="#999"
+        android:name="모서리가 둥근 직사각형 1"
+        android:pathData="m153.7 222.7c19.7 -5.3 40 6.4 45.3 26.1l42.3 157.6c5.3 19.7 -6.4 40 -26.2 45.3c-19.7 5.3 -40 -6.4 -45.3 -26.1l-42.3 -157.6c-5.3 -19.7 6.4 -40 26.2 -45.3z" />
 </vector>
