--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -70,10 +70,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/requiredInfo"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
+            <TextView
+                android:id="@+id/checkID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="중복확인 메시지"
+                android:visibility="gone"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="@id/tvID"
+                app:layout_constraintBottom_toBottomOf="@id/tvID"
+                app:layout_constraintLeft_toRightOf="@id/tvID" />
+
 
             <EditText
                 android:id="@+id/insertID"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="4 -10자 대소문자, 숫자, '_'사용"
                 android:ems="13"
@@ -81,24 +92,11 @@
                 android:padding="10dp"
                 android:background="@drawable/edit_round"
                 android:layout_marginTop="7dp"
-                android:layout_marginLeft="40dp"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginHorizontal="40dp"
                 app:layout_constraintTop_toBottomOf="@+id/tvID"
                 android:maxLength="20"
                 android:ellipsize="start"
                 android:singleLine="true" />
-
-            <Button
-                android:id="@+id/checkNewId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/button_round"
-                android:text="중복 확인"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="3dp"
-                app:layout_constraintTop_toBottomOf="@id/tvID"
-                app:layout_constraintRight_toRightOf="parent"/>
-
 
             <TextView
                 android:id="@+id/tvPasswd"
@@ -106,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:text="* 비밀번호"
                 android:textSize="16sp"
-                android:layout_marginLeft="45dp"
+                android:layout_marginStart="45dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/insertID"
                 app:layout_constraintLeft_toLeftOf="parent"/>
@@ -135,10 +133,21 @@
                 android:layout_height="wrap_content"
                 android:text="* 비밀번호 확인"
                 android:textSize="16sp"
-                android:layout_marginLeft="45dp"
+                android:layout_marginStart="45dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/insertPW"
                 app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <TextView
+                android:id="@+id/checkPW"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="비밀번호 확인 메시지"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="@id/tvCheckPW"
+                app:layout_constraintBottom_toBottomOf="@id/tvCheckPW"
+                app:layout_constraintLeft_toRightOf="@id/tvCheckPW" />
 
 
             <EditText
@@ -163,7 +172,7 @@
                 android:layout_height="wrap_content"
                 android:text="* 이름"
                 android:textSize="16sp"
-                android:layout_marginLeft="45dp"
+                android:layout_marginStart="45dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/checkingPW"
                 app:layout_constraintLeft_toLeftOf="parent"/>
@@ -215,7 +224,7 @@
                     android:id="@+id/tvBirthday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:layout_marginTop="20dp"
                     android:text="생년월일"
                     android:textSize="16sp"
@@ -241,7 +250,7 @@
                     android:id="@+id/tvPhoneNum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:layout_marginTop="20dp"
                     android:text="전화번호"
                     android:textSize="16sp"
@@ -267,7 +276,7 @@
                     android:id="@+id/tvgender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:layout_marginTop="20dp"
                     android:text="성별"
                     android:textSize="16sp"
@@ -286,7 +295,7 @@
                         android:id="@+id/male"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="100dp"
+                        android:layout_marginEnd="100dp"
                         android:text="남성" />
 
                     <RadioButton
@@ -302,7 +311,7 @@
                     android:id="@+id/tvEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="45dp"
+                    android:layout_marginStart="45dp"
                     android:layout_marginTop="20dp"
                     android:text="이메일"
                     android:textSize="16sp"
@@ -332,7 +341,7 @@
                     android:id="@+id/asSign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="13dp"
                     android:text=" @ "
                     android:textSize="16sp"
