--- a/app/src/main/res/layout/recycler_notice.xml
+++ b/app/src/main/res/layout/recycler_notice.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="title"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -50,7 +50,7 @@
         android:id="@+id/notice_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/background_gray"
+        android:background="@color/colorNormalLight"
         android:paddingVertical="30dp"
         android:paddingHorizontal="15dp"
         android:visibility="gone"
