--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,20 +26,9 @@
             android:paddingStart="15dp"
             android:text="로그인"
             android:textColor="#aa777777"
-            android:textSize="18sp">
-
-            <requestFocus />
-        </TextView>
+            android:textSize="18sp" />
 
     </androidx.appcompat.widget.Toolbar>
-
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@color/background_gray"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <EditText
         android:id="@+id/editID"
@@ -49,10 +38,10 @@
         android:textSize="18sp"
         android:padding="15dp"
         android:background="@drawable/edit_round"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/line"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
 
     <EditText
         android:id="@+id/editPASSWD"
@@ -82,17 +71,6 @@
         android:layout_marginLeft="40dp"
         app:layout_constraintTop_toBottomOf="@+id/editPASSWD"/>
 
-<!--    <TextView-->
-<!--        android:id="@+id/search_id_passwd"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="아이디 / 비밀번호 찾기"-->
-<!--        android:textSize="10sp"-->
-<!--        android:textColor="#aa777777"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        app:layout_constraintRight_toRightOf="@id/loginButton"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/loginButton"/>-->
-
     <View
         android:id="@+id/line2"
         android:layout_width="match_parent"
@@ -100,58 +78,18 @@
         android:background="@color/background_gray"
         app:layout_constraintTop_toBottomOf="@+id/loginButton"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="40dp"/>
 
     <Button
-        android:id="@id/loginNaver"
-        android:layout_width="74dp"
-        android:layout_height="74dp"
-        android:background="@drawable/button_circle"
-        android:text="N"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/line2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/loginKakao"
-        android:backgroundTint="@color/naver"/>
-
-    <Button
-        android:id="@id/loginKakao"
-        android:layout_width="74dp"
-        android:layout_height="74dp"
-        android:background="@drawable/button_circle"
-        android:text="K"
-        android:textSize="25sp"
-        android:backgroundTint="@color/kakao"
-        app:layout_constraintTop_toTopOf="@id/loginNaver"
-        app:layout_constraintLeft_toRightOf="@+id/loginNaver"
-        app:layout_constraintRight_toLeftOf="@+id/loginGoogle"/>
-
-    <Button
-        android:id="@id/loginGoogle"
-        android:layout_width="74dp"
-        android:layout_height="74dp"
-        android:background="@drawable/button_circle"
-        android:text="G"
-        android:textSize="25sp"
-        android:backgroundTint="@color/google"
-        android:textColor="#ffffff"
-        app:layout_constraintTop_toTopOf="@id/loginNaver"
-        app:layout_constraintLeft_toRightOf="@+id/loginKakao"
-        app:layout_constraintRight_toLeftOf="@+id/loginGuest"/>
-
-    <Button
-        android:id="@id/loginGuest"
-        android:layout_width="74dp"
-        android:layout_height="74dp"
-        android:background="@drawable/button_circle"
-        android:text="G"
-        android:textSize="25sp"
+        android:id="@+id/join"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_round"
+        android:text="회원 가입"
+        android:textSize="18sp"
+        android:layout_margin="10dp"
         android:backgroundTint="@color/background_gray"
-        app:layout_constraintTop_toTopOf="@id/loginNaver"
-        app:layout_constraintLeft_toRightOf="@id/loginGoogle"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/line2" />
 
 
 
