--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp">
+    android:layout_marginBottom="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/busstop_bookmark"
@@ -11,28 +12,31 @@
         android:layout_height="60dp"
         android:padding="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button_round"
-        android:backgroundTint="#F2E7F4"
+        android:background="@drawable/background_rect"
+        android:backgroundTint="@color/bg"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
         <ImageView
             android:id="@+id/drawer_button"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_marginStart="15dp"
+            android:tint="@color/text"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:src="@drawable/ic_drawer_down"/>
+            android:src="@drawable/ic_down"/>
 
         <TextView
             android:id="@+id/bustop_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="버스정류장 이름"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:textColor="@color/text"
+            android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@id/drawer_button"
             app:layout_constraintRight_toLeftOf="@+id/bookmark_button"
@@ -47,7 +51,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:src="@drawable/ic_bookmark"
-            android:tint="#C58CE6"/>
+            android:tint="@color/bus_yellow"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -55,9 +59,7 @@
         android:id="@+id/bus_bookmark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/busstop_bookmark"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="#88F3E5F5"/>
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
