--- a/app/src/main/res/layout/activity_lost_goodsinfo.xml
+++ b/app/src/main/res/layout/activity_lost_goodsinfo.xml
@@ -84,5 +84,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <View
+        android:id="@+id/loading_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#3BA1A1A1" />
+
+    <ProgressBar
+        android:id="@+id/loading_progress"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
