--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,8 +87,11 @@
         android:background="@drawable/button_round"
         android:text="회원 가입"
         android:textSize="18sp"
-        android:layout_margin="10dp"
-        android:backgroundTint="@color/background_gray"
+        android:backgroundTint="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
         app:layout_constraintTop_toBottomOf="@id/line2" />
 
 
