--- a/app/src/main/res/layout/activity_lost_goodsinfo.xml
+++ b/app/src/main/res/layout/activity_lost_goodsinfo.xml
@@ -26,9 +26,7 @@
             android:text="분실물 정보 조회"
             android:textSize="18sp"
             android:textColor="#aa777777"
-            android:paddingStart="15dp">
-            <requestFocus/>
-        </TextView>
+            android:paddingStart="15dp" />
 
     </androidx.appcompat.widget.Toolbar>
 
