자동새로고침 ( 버스, 정류장 )

--- a/app/src/main/res/layout/station_list.xml
+++ b/app/src/main/res/layout/station_list.xml
@@ -48,6 +48,28 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/man"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/ic_man" />
+
+    <ImageView
+        android:id="@+id/bus"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/ic_bus_" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/center"
         android:layout_width="wrap_content"
